--- a/ipip-asn.ipynb
+++ b/ipip-asn.ipynb
@@ -2,15 +2,742 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<html><body><script>document.location='/host_not_found_error';</script></body></html>\n",
-      "\n"
+      "728\n",
+      "AS173\n",
+      "AS2497\n",
+      "AS2500\n",
+      "AS2501\n",
+      "AS2504\n",
+      "AS2505\n",
+      "AS2506\n",
+      "AS2508\n",
+      "AS2510\n",
+      "AS2511\n",
+      "AS2512\n",
+      "AS2513\n",
+      "AS2514\n",
+      "AS2515\n",
+      "AS2516\n",
+      "AS2518\n",
+      "AS2519\n",
+      "AS2522\n",
+      "AS2523\n",
+      "AS2526\n",
+      "AS2527\n",
+      "AS2907\n",
+      "AS2915\n",
+      "AS3488\n",
+      "AS4672\n",
+      "AS4673\n",
+      "AS4675\n",
+      "AS4677\n",
+      "AS4678\n",
+      "AS4680\n",
+      "AS4685\n",
+      "AS4686\n",
+      "AS4690\n",
+      "AS4693\n",
+      "AS4694\n",
+      "AS4695\n",
+      "AS4697\n",
+      "AS4711\n",
+      "AS4713\n",
+      "AS4717\n",
+      "AS4718\n",
+      "AS4721\n",
+      "AS4723\n",
+      "AS4725\n",
+      "AS4729\n",
+      "AS4730\n",
+      "AS4774\n",
+      "AS4777\n",
+      "AS4785\n",
+      "AS7500\n",
+      "AS7502\n",
+      "AS7503\n",
+      "AS7505\n",
+      "AS7506\n",
+      "AS7509\n",
+      "AS7511\n",
+      "AS7513\n",
+      "AS7514\n",
+      "AS7516\n",
+      "AS7521\n",
+      "AS7522\n",
+      "AS7524\n",
+      "AS7527\n",
+      "AS7529\n",
+      "AS7530\n",
+      "AS7603\n",
+      "AS7660\n",
+      "AS7663\n",
+      "AS7664\n",
+      "AS7665\n",
+      "AS7667\n",
+      "AS7668\n",
+      "AS7670\n",
+      "AS7671\n",
+      "AS7672\n",
+      "AS7674\n",
+      "AS7676\n",
+      "AS7677\n",
+      "AS7678\n",
+      "AS7679\n",
+      "AS7682\n",
+      "AS7684\n",
+      "AS7686\n",
+      "AS7687\n",
+      "AS7690\n",
+      "AS9351\n",
+      "AS9353\n",
+      "AS9354\n",
+      "AS9355\n",
+      "AS9357\n",
+      "AS9358\n",
+      "AS9365\n",
+      "AS9366\n",
+      "AS9367\n",
+      "AS9370\n",
+      "AS9371\n",
+      "AS9374\n",
+      "AS9378\n",
+      "AS9409\n",
+      "AS9466\n",
+      "AS9591\n",
+      "AS9593\n",
+      "AS9595\n",
+      "AS9597\n",
+      "AS9598\n",
+      "AS9600\n",
+      "AS9601\n",
+      "AS9604\n",
+      "AS9605\n",
+      "AS9607\n",
+      "AS9614\n",
+      "AS9615\n",
+      "AS9617\n",
+      "AS9618\n",
+      "AS9619\n",
+      "AS9621\n",
+      "AS9622\n",
+      "AS9743\n",
+      "AS9824\n",
+      "AS9935\n",
+      "AS9990\n",
+      "AS9991\n",
+      "AS9993\n",
+      "AS9997\n",
+      "AS9999\n",
+      "AS10000\n",
+      "AS10001\n",
+      "AS10002\n",
+      "AS10003\n",
+      "AS10004\n",
+      "AS10006\n",
+      "AS10010\n",
+      "AS10011\n",
+      "AS10012\n",
+      "AS10013\n",
+      "AS10014\n",
+      "AS10015\n",
+      "AS10016\n",
+      "AS10019\n",
+      "AS10021\n",
+      "AS10209\n",
+      "AS17504\n",
+      "AS17505\n",
+      "AS17506\n",
+      "AS17509\n",
+      "AS17510\n",
+      "AS17511\n",
+      "AS17512\n",
+      "AS17514\n",
+      "AS17516\n",
+      "AS17518\n",
+      "AS17523\n",
+      "AS17529\n",
+      "AS17530\n",
+      "AS17534\n",
+      "AS17661\n",
+      "AS17675\n",
+      "AS17676\n",
+      "AS17678\n",
+      "AS17680\n",
+      "AS17682\n",
+      "AS17683\n",
+      "AS17685\n",
+      "AS17686\n",
+      "AS17687\n",
+      "AS17689\n",
+      "AS17691\n",
+      "AS17693\n",
+      "AS17694\n",
+      "AS17698\n",
+      "AS17699\n",
+      "AS17701\n",
+      "AS17707\n",
+      "AS17905\n",
+      "AS17931\n",
+      "AS17932\n",
+      "AS17934\n",
+      "AS17936\n",
+      "AS17937\n",
+      "AS17939\n",
+      "AS17940\n",
+      "AS17941\n",
+      "AS17944\n",
+      "AS17946\n",
+      "AS17947\n",
+      "AS17948\n",
+      "AS17950\n",
+      "AS17953\n",
+      "AS17955\n",
+      "AS17956\n",
+      "AS17957\n",
+      "AS17958\n",
+      "AS17960\n",
+      "AS17961\n",
+      "AS17977\n",
+      "AS18068\n",
+      "AS18069\n",
+      "AS18070\n",
+      "AS18071\n",
+      "AS18072\n",
+      "AS18074\n",
+      "AS18075\n",
+      "AS18076\n",
+      "AS18077\n",
+      "AS18081\n",
+      "AS18087\n",
+      "AS18088\n",
+      "AS18090\n",
+      "AS18091\n",
+      "AS18092\n",
+      "AS18094\n",
+      "AS18097\n",
+      "AS18121\n",
+      "AS18123\n",
+      "AS18124\n",
+      "AS18125\n",
+      "AS18126\n",
+      "AS18127\n",
+      "AS18128\n",
+      "AS18129\n",
+      "AS18131\n",
+      "AS18134\n",
+      "AS18135\n",
+      "AS18136\n",
+      "AS18139\n",
+      "AS18140\n",
+      "AS18141\n",
+      "AS18142\n",
+      "AS18143\n",
+      "AS18144\n",
+      "AS18148\n",
+      "AS18149\n",
+      "AS18150\n",
+      "AS18258\n",
+      "AS18259\n",
+      "AS18260\n",
+      "AS18263\n",
+      "AS18264\n",
+      "AS18266\n",
+      "AS18267\n",
+      "AS18268\n",
+      "AS18271\n",
+      "AS18272\n",
+      "AS18274\n",
+      "AS18276\n",
+      "AS18278\n",
+      "AS18279\n",
+      "AS18281\n",
+      "AS18282\n",
+      "AS18283\n",
+      "AS18289\n",
+      "AS18383\n",
+      "AS23613\n",
+      "AS23614\n",
+      "AS23615\n",
+      "AS23616\n",
+      "AS23618\n",
+      "AS23619\n",
+      "AS23620\n",
+      "AS23623\n",
+      "AS23624\n",
+      "AS23627\n",
+      "AS23628\n",
+      "AS23629\n",
+      "AS23630\n",
+      "AS23631\n",
+      "AS23632\n",
+      "AS23633\n",
+      "AS23634\n",
+      "AS23635\n",
+      "AS23637\n",
+      "AS23639\n",
+      "AS23641\n",
+      "AS23642\n",
+      "AS23661\n",
+      "AS23720\n",
+      "AS23748\n",
+      "AS23761\n",
+      "AS23773\n",
+      "AS23774\n",
+      "AS23775\n",
+      "AS23776\n",
+      "AS23777\n",
+      "AS23778\n",
+      "AS23779\n",
+      "AS23780\n",
+      "AS23781\n",
+      "AS23783\n",
+      "AS23784\n",
+      "AS23785\n",
+      "AS23786\n",
+      "AS23788\n",
+      "AS23790\n",
+      "AS23791\n",
+      "AS23793\n",
+      "AS23794\n",
+      "AS23795\n",
+      "AS23798\n",
+      "AS23799\n",
+      "AS23804\n",
+      "AS23805\n",
+      "AS23807\n",
+      "AS23808\n",
+      "AS23816\n",
+      "AS23817\n",
+      "AS23818\n",
+      "AS23820\n",
+      "AS23822\n",
+      "AS23824\n",
+      "AS23826\n",
+      "AS23827\n",
+      "AS23828\n",
+      "AS23829\n",
+      "AS23831\n",
+      "AS23833\n",
+      "AS23836\n",
+      "AS23885\n",
+      "AS23967\n",
+      "AS24121\n",
+      "AS24229\n",
+      "AS24248\n",
+      "AS24249\n",
+      "AS24250\n",
+      "AS24251\n",
+      "AS24252\n",
+      "AS24253\n",
+      "AS24254\n",
+      "AS24255\n",
+      "AS24257\n",
+      "AS24259\n",
+      "AS24260\n",
+      "AS24261\n",
+      "AS24262\n",
+      "AS24263\n",
+      "AS24264\n",
+      "AS24268\n",
+      "AS24270\n",
+      "AS24271\n",
+      "AS24275\n",
+      "AS24276\n",
+      "AS24277\n",
+      "AS24278\n",
+      "AS24279\n",
+      "AS24280\n",
+      "AS24282\n",
+      "AS24283\n",
+      "AS24284\n",
+      "AS24286\n",
+      "AS24287\n",
+      "AS24288\n",
+      "AS24289\n",
+      "AS24290\n",
+      "AS24291\n",
+      "AS24295\n",
+      "AS24296\n",
+      "AS24336\n",
+      "AS24477\n",
+      "AS24512\n",
+      "AS24567\n",
+      "AS24572\n",
+      "AS37888\n",
+      "AS37889\n",
+      "AS37891\n",
+      "AS37892\n",
+      "AS37893\n",
+      "AS37897\n",
+      "AS37898\n",
+      "AS37900\n",
+      "AS37904\n",
+      "AS37905\n",
+      "AS37906\n",
+      "AS37907\n",
+      "AS37908\n",
+      "AS37910\n",
+      "AS37912\n",
+      "AS37914\n",
+      "AS37915\n",
+      "AS37916\n",
+      "AS37917\n",
+      "AS37918\n",
+      "AS37919\n",
+      "AS37922\n",
+      "AS37981\n",
+      "AS38033\n",
+      "AS38074\n",
+      "AS38215\n",
+      "AS38462\n",
+      "AS38627\n",
+      "AS38628\n",
+      "AS38629\n",
+      "AS38631\n",
+      "AS38633\n",
+      "AS38634\n",
+      "AS38635\n",
+      "AS38636\n",
+      "AS38638\n",
+      "AS38639\n",
+      "AS38641\n",
+      "AS38642\n",
+      "AS38643\n",
+      "AS38644\n",
+      "AS38648\n",
+      "AS38651\n",
+      "AS38652\n",
+      "AS38654\n",
+      "AS38715\n",
+      "AS45217\n",
+      "AS45672\n",
+      "AS45675\n",
+      "AS45677\n",
+      "AS45678\n",
+      "AS45679\n",
+      "AS45680\n",
+      "AS45685\n",
+      "AS45687\n",
+      "AS45688\n",
+      "AS45689\n",
+      "AS45690\n",
+      "AS51044\n",
+      "AS54415\n",
+      "AS55373\n",
+      "AS55376\n",
+      "AS55377\n",
+      "AS55378\n",
+      "AS55379\n",
+      "AS55380\n",
+      "AS55381\n",
+      "AS55382\n",
+      "AS55383\n",
+      "AS55384\n",
+      "AS55385\n",
+      "AS55387\n",
+      "AS55388\n",
+      "AS55390\n",
+      "AS55391\n",
+      "AS55392\n",
+      "AS55393\n",
+      "AS55394\n",
+      "AS55396\n",
+      "AS55569\n",
+      "AS55873\n",
+      "AS55890\n",
+      "AS55891\n",
+      "AS55894\n",
+      "AS55895\n",
+      "AS55897\n",
+      "AS55898\n",
+      "AS55899\n",
+      "AS55900\n",
+      "AS55901\n",
+      "AS55902\n",
+      "AS55904\n",
+      "AS55905\n",
+      "AS55907\n",
+      "AS55909\n",
+      "AS55910\n",
+      "AS55912\n",
+      "AS55949\n",
+      "AS56291\n",
+      "AS58645\n",
+      "AS58647\n",
+      "AS58648\n",
+      "AS58649\n",
+      "AS58650\n",
+      "AS58651\n",
+      "AS58652\n",
+      "AS58653\n",
+      "AS58654\n",
+      "AS58784\n",
+      "AS58785\n",
+      "AS58786\n",
+      "AS58788\n",
+      "AS58789\n",
+      "AS58791\n",
+      "AS58793\n",
+      "AS59091\n",
+      "AS59092\n",
+      "AS59093\n",
+      "AS59094\n",
+      "AS59095\n",
+      "AS59096\n",
+      "AS59097\n",
+      "AS59099\n",
+      "AS59102\n",
+      "AS59103\n",
+      "AS59104\n",
+      "AS59105\n",
+      "AS59107\n",
+      "AS59108\n",
+      "AS59109\n",
+      "AS59110\n",
+      "AS59111\n",
+      "AS59113\n",
+      "AS59115\n",
+      "AS59116\n",
+      "AS59118\n",
+      "AS59120\n",
+      "AS59121\n",
+      "AS59123\n",
+      "AS59124\n",
+      "AS59125\n",
+      "AS59126\n",
+      "AS59127\n",
+      "AS59128\n",
+      "AS59129\n",
+      "AS59349\n",
+      "AS62184\n",
+      "AS63770\n",
+      "AS63771\n",
+      "AS63772\n",
+      "AS63773\n",
+      "AS63774\n",
+      "AS63775\n",
+      "AS63776\n",
+      "AS63777\n",
+      "AS63778\n",
+      "AS63779\n",
+      "AS63780\n",
+      "AS63781\n",
+      "AS63782\n",
+      "AS63783\n",
+      "AS63784\n",
+      "AS63785\n",
+      "AS63786\n",
+      "AS63787\n",
+      "AS63789\n",
+      "AS63790\n",
+      "AS63791\n",
+      "AS63793\n",
+      "AS63794\n",
+      "AS63795\n",
+      "AS63796\n",
+      "AS63797\n",
+      "AS63798\n",
+      "AS63799\n",
+      "AS63800\n",
+      "AS63801\n",
+      "AS63802\n",
+      "AS63803\n",
+      "AS63805\n",
+      "AS63806\n",
+      "AS63917\n",
+      "AS63997\n",
+      "AS131077\n",
+      "AS131078\n",
+      "AS131079\n",
+      "AS131156\n",
+      "AS131157\n",
+      "AS131158\n",
+      "AS131159\n",
+      "AS131160\n",
+      "AS131161\n",
+      "AS131893\n",
+      "AS131894\n",
+      "AS131895\n",
+      "AS131896\n",
+      "AS131897\n",
+      "AS131898\n",
+      "AS131899\n",
+      "AS131901\n",
+      "AS131902\n",
+      "AS131903\n",
+      "AS131904\n",
+      "AS131905\n",
+      "AS131907\n",
+      "AS131909\n",
+      "AS131910\n",
+      "AS131911\n",
+      "AS131912\n",
+      "AS131914\n",
+      "AS131915\n",
+      "AS131916\n",
+      "AS131917\n",
+      "AS131918\n",
+      "AS131919\n",
+      "AS131921\n",
+      "AS131923\n",
+      "AS131924\n",
+      "AS131925\n",
+      "AS131926\n",
+      "AS131927\n",
+      "AS131928\n",
+      "AS131929\n",
+      "AS131930\n",
+      "AS131931\n",
+      "AS131932\n",
+      "AS131933\n",
+      "AS131934\n",
+      "AS131936\n",
+      "AS131937\n",
+      "AS131938\n",
+      "AS131939\n",
+      "AS131940\n",
+      "AS131941\n",
+      "AS131942\n",
+      "AS131943\n",
+      "AS131944\n",
+      "AS131945\n",
+      "AS131946\n",
+      "AS131948\n",
+      "AS131949\n",
+      "AS131950\n",
+      "AS131951\n",
+      "AS131952\n",
+      "AS131953\n",
+      "AS131954\n",
+      "AS131955\n",
+      "AS131957\n",
+      "AS131958\n",
+      "AS131959\n",
+      "AS131960\n",
+      "AS131961\n",
+      "AS131963\n",
+      "AS131964\n",
+      "AS131965\n",
+      "AS131966\n",
+      "AS131969\n",
+      "AS131970\n",
+      "AS131971\n",
+      "AS131972\n",
+      "AS131973\n",
+      "AS131976\n",
+      "AS131977\n",
+      "AS131980\n",
+      "AS131981\n",
+      "AS131982\n",
+      "AS131983\n",
+      "AS131984\n",
+      "AS131986\n",
+      "AS131987\n",
+      "AS131988\n",
+      "AS131989\n",
+      "AS131990\n",
+      "AS132504\n",
+      "AS132726\n",
+      "AS132827\n",
+      "AS133180\n",
+      "AS133203\n",
+      "AS133782\n",
+      "AS133900\n",
+      "AS134351\n",
+      "AS134827\n",
+      "AS135161\n",
+      "AS135304\n",
+      "AS135372\n",
+      "AS136506\n",
+      "AS136586\n",
+      "AS136779\n",
+      "AS136796\n",
+      "AS137008\n",
+      "AS137445\n",
+      "AS137462\n",
+      "AS137819\n",
+      "AS137912\n",
+      "AS138033\n",
+      "AS138038\n",
+      "AS138181\n",
+      "AS138384\n",
+      "AS138632\n",
+      "AS138652\n",
+      "AS138968\n",
+      "AS138986\n",
+      "AS139076\n",
+      "AS139255\n",
+      "AS139345\n",
+      "AS139468\n",
+      "AS139472\n",
+      "AS140501\n",
+      "AS140683\n",
+      "AS140868\n",
+      "AS141757\n",
+      "AS142025\n",
+      "AS142052\n",
+      "AS146969\n",
+      "AS146972\n",
+      "AS146974\n",
+      "AS146976\n",
+      "AS146977\n",
+      "AS146979\n",
+      "AS146980\n",
+      "AS146981\n",
+      "AS146982\n",
+      "AS146984\n",
+      "AS146985\n",
+      "AS146986\n",
+      "AS146987\n",
+      "AS148985\n",
+      "AS149428\n",
+      "AS150296\n",
+      "AS150298\n",
+      "AS150314\n",
+      "AS150356\n",
+      "AS150357\n",
+      "AS150358\n",
+      "AS150359\n",
+      "AS150362\n",
+      "AS150363\n",
+      "AS150366\n",
+      "AS150367\n",
+      "AS150368\n",
+      "AS150369\n",
+      "AS150445\n",
+      "AS150685\n",
+      "AS151065\n",
+      "AS151067\n",
+      "AS151350\n",
+      "AS151366\n",
+      "AS151371\n",
+      "AS151373\n",
+      "AS151420\n",
+      "AS198305\n",
+      "AS198924\n",
+      "AS198969\n",
+      "AS199108\n",
+      "AS199266\n",
+      "AS200226\n",
+      "AS201197\n",
+      "AS203577\n",
+      "AS208690\n",
+      "AS208755\n",
+      "AS210542\n",
+      "AS211066\n",
+      "AS212817\n",
+      "AS213164\n",
+      "AS215871\n",
+      "AS215935\n",
+      "AS216006\n",
+      "AS216447\n"
      ]
     }
    ],
@@ -23,28 +750,32 @@
     "\n",
     "# fipv4 = open('ipip-ipv4-CN.txt', 'w')\n",
     "# fipv6 = open('ipip-ipv6-CN.txt', 'w')\n",
-    "fipv4 = open('ipip-ipv4-US.txt', 'w')\n",
-    "fipv6 = open('ipip-ipv6-US.txt', 'w')\n",
+    "# fipv4 = open('ipip-ipv4-US.txt', 'w')\n",
+    "# fipv6 = open('ipip-ipv6-US.txt', 'w')\n",
+    "fipv4 = open('ipip-ipv4-JP.txt', 'w')\n",
+    "fipv6 = open('ipip-ipv6-JP.txt', 'w')\n",
     "# with open('ipip-asn-CN.txt', 'w') as f:\n",
-    "with open('ipip-asn-US.txt', 'w') as f:\n",
+    "# with open('ipip-asn-US.txt', 'w') as f:\n",
+    "with open('ipip-asn-JP-all.txt', 'w') as f:\n",
     "    # url = 'https://whois.ipip.net/iso/US'\n",
     "    # url = 'https://whois.ipip.net/iso/CN'\n",
+    "    #url = 'https://whois.ipip.net/iso/JP'\n",
     "    header = {\n",
     "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) \\\n",
     "        AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.149 Safari/537.36'\n",
     "    }\n",
     "    # html = requests.get(url, headers=header, stream=True) \n",
-    "    html = open('us.html', 'r')\n",
-    "    html.encoding = 'utf-8'\n",
-    "    print(html.text)\n",
-    "    cxtTree = etree.fromstring(html.text, etree.HTMLParser())\n",
-    "    items = cxtTree.xpath('//div/table/tr')\n",
-    "    # print(len(items))\n",
+    "    html = open('jp.html', 'r').read()\n",
+    "    # html.encoding = 'utf-8'\n",
+    "    # print(html)\n",
+    "    cxtTree = etree.fromstring(html, etree.HTMLParser())\n",
+    "    items = cxtTree.xpath('//div/table/tbody/tr')\n",
+    "    print(len(items))\n",
     "    # print(items[0].xpath('td')[0].xpath('a/text()'))\n",
     "    for _,item in enumerate(items):\n",
     "        newasn = item.xpath('td')[0].xpath('a/text()')[0].strip()\n",
     "        newname = item.xpath('td')[1].xpath('text()')[0].strip()\n",
-    "        print(str(item.xpath('td')[2].xpath('text()')[0]).replace(',', ''))\n",
+    "        # print(str(item.xpath('td')[2].xpath('text()')[0]).replace(',', ''))\n",
     "        newipv4 = str(item.xpath('td')[2].xpath('text()')[0]).replace(',', '')\n",
     "\n",
     "        newipv6 = str(item.xpath('td')[3].xpath('text()')[0]).replace(',', '')\n",
